Make the site width fixed, not collapse-able

--- a/css/style.less
+++ b/css/style.less
@@ -32,9 +32,8 @@ html
 body
 {
   width: 46em;
-  max-width: 90%;
   margin: 0 auto;
-  padding-bottom: 3em;
+  padding: 0 20px 3em;
 }
 
 ul
